upgrade of selenium to version 4.x